Revert "fix(FormField): remove "hover-gap""
This reverts commit 6f41d3815ac680c77426000669e8398838d0ba11.

--- a/packages/components/src/components/FormField/FormField.module.scss
+++ b/packages/components/src/components/FormField/FormField.module.scss
@@ -8,7 +8,7 @@
 /* Elements */
 .label {
   order: 1;
-  padding-bottom: var(--form-control--label-to-control-spacing);
+  margin-bottom: var(--form-control--label-to-control-spacing);
 }
 
 .fieldError,
